Rename package to bitbybit; make bitenum syntax more similar to bitfield syntax

--- a/bitbybit-tests/Cargo.toml
+++ b/bitbybit-tests/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitfields_tests"
+name = "bitbybit-tests"
 version = "1.0.0"
 authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
 edition = "2021"
@@ -7,5 +7,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitfields = { path = "../bitfields" }
+bitbybit = { path = "../bitbybit" }
 arbitrary-int = "1.1.0"
