--- a/bitbybit/Cargo.toml
+++ b/bitbybit/Cargo.toml
@@ -7,8 +7,8 @@ description = "Efficient implementation of bit-fields where several numbers are 
 license = "MIT"
 repository = "https://github.com/danlehmann/bitfield"
 readme = "README.md"
-keywords = ["integer", "unaligned", "misaligned"]
-categories = ["bitfield", "embedded", "no-std", "data-structures"]
+keywords = ["integer", "unaligned", "misaligned", "bitfield"]
+categories = ["embedded", "no-std", "data-structures"]
 
 [lib]
 proc-macro = true
