Allow using cfg for enum members

--- a/bitbybit-tests/Cargo.toml
+++ b/bitbybit-tests/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 [dependencies]
 bitbybit = { path = "../bitbybit" }
 arbitrary-int = "1.2.0"
+
+[features]
+# This is to allow cfg for enum members
+test123 = []
