--- a/bitbybit-tests/Cargo.toml
+++ b/bitbybit-tests/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 bitbybit = { path = "../bitbybit" }
 arbitrary-int = "1.2.5"
+trybuild = "1.0.80"
 
 [features]
 # This is to allow cfg for enum members
