--- a/bitbybit-tests/Cargo.toml
+++ b/bitbybit-tests/Cargo.toml
@@ -3,6 +3,7 @@ name = "bitbybit-tests"
 version = "1.0.0"
 authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
