Rework bitenum impl & move tests (#50)
* Rework bitenum impl & move tests

Rewrite the bitenum module to use more rusty patterns.

1. Use the native syn parsing stuff to parse the attributes arguments
2. Remove all instances of panic! with syn::Result. This results in much
   higher quality error messages, highlighting precisely the bits of
   code that cause the error.
3. Allow arbitrary order in specification of the uN and 'exhaustive'
   arguments
4. Ensure that both the uN and 'exhaustive' arguments are provided,
   resulting in more actionable error messages
5. Move logic in different functions/methods. This reduces the
   complexity of the `bitenum` function, also reduces the indentation
   level.

I'm still a bit dissatisfied with the way enum discriminants are parsed
into integers. I'm not exactly sure it's necessary…

I've been looking at the bitfield module, and I'm a bit terrified, I'm
opening this PR before starting work on the other one. This way, I avoid
doing work that you would refuse to merge outright.

Why move the tests inside the bitbybit-tests package? Because it enables
using the -Zunpretty rustc flag to inspect the expanded macros, I used
the following commands:

RUSTC_BOOTSTRAP=1 cargo rustc --tests -p bitbybit-tests -- --cfg=tests -Zunpretty=expanded

* Implement PR suggestions

* Add test for implicit non-exhaustive

* Rename constructor

* Insert the macro input even when erroring

This reduces the noise caused by the enum not existing, because we do
not define it in case of errors.

* Fix use of std

* Use syn's int parsing method isntead of custom one

* Fix error message

* Revert dependency version changes

--- a/bitbybit/Cargo.toml
+++ b/bitbybit/Cargo.toml
@@ -18,7 +18,7 @@ proc-macro = true
 experimental_builder_syntax = []
 
 [dependencies]
-syn = "2.0"
+syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 arbitrary-int = "1.2.6"
