--- a/bitbybit-tests/Cargo.toml
+++ b/bitbybit-tests/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitbybit = { path = "../bitbybit", features = ["experimental_builder_syntax"] }
+bitbybit = { path = "../bitbybit" }
 arbitrary-int = "1.2.6"
 
 [features]
