--- a/bitbybit-tests/Cargo.toml
+++ b/bitbybit-tests/Cargo.toml
@@ -9,8 +9,12 @@ publish = false
 
 [dependencies]
 bitbybit = { path = "../bitbybit" }
-arbitrary-int = "1.3.0"
+arbitrary-int = "1.3"
+defmt = "1"
 
 [features]
+default = ["defmt"]
 # This is to allow cfg for enum members
 test123 = []
+# Adds test for feature flag on defmt support.
+defmt = ["arbitrary-int/defmt"]
