--- a/bitbybit/Cargo.toml
+++ b/bitbybit/Cargo.toml
@@ -15,9 +15,15 @@ proc-macro = true
 
 [features]
 introspect = []
+extra-traits = ["syn/extra-traits"]
+# Required for the field example to work.
+examples = ["arbitrary-int/defmt"]
 
 [dependencies]
 syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 arbitrary-int = "1.3.0"
+
+[dev-dependencies]
+defmt = "1"
