--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -4,6 +4,14 @@ on: [push, pull_request]
 jobs:
   build-and-test:
     runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: with-defmt
+            args: '--release --no-default-features --features defmt'
+          - name: without-defmt
+            args: '--release --no-default-features'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -13,9 +21,8 @@ jobs:
         with:
           toolchain: stable
       - uses: actions-rs/cargo@v1
-        with:
           command: test
-          args: --release --no-default-features --features "defmt"
+          args: ${{ matrix.args }}
 
   build-no-std:
     runs-on: ubuntu-latest
@@ -25,4 +32,6 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: "thumbv7em-none-eabihf"
-      - run: cargo build --manifest-path ./qemu-tests/Cargo.toml --release --target thumbv7em-none-eabihf
+      # I'd prefer --manifest-path ./qemu-tests/Cargo.toml, but I think this ignores
+      # the .cargo/config.toml file inside the QEMU test folder.
+      - run: cd qemu-tests && cargo build --target thumbv7em-none-eabihf --release
