--- a/qemu-tests/Cargo.toml
+++ b/qemu-tests/Cargo.toml
@@ -7,7 +7,7 @@ description = "QEMU no-std tests for bitbybit"
 
 [dependencies]
 cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
-cortex-m-rt = { version =  "0.7", features = ["device"] }
+cortex-m-rt = { version =  "0.7" }
 cortex-m-semihosting = "0.5.0"
 defmt = "1"
 defmt-semihosting = "0.3"
