--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           toolchain: stable
       - uses: actions-rs/cargo@v1
+        with:
           command: test
           args: ${{ matrix.args }}
 
