--- a/bitbybit/Cargo.toml
+++ b/bitbybit/Cargo.toml
@@ -3,6 +3,7 @@ name = "bitbybit"
 version = "2.0.0"
 authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
 edition = "2021"
+rust-version = "1.83"
 description = "Efficient implementation of bit-fields where several numbers are packed within a larger number and bit-enums. Useful for drivers, so it works in no_std environments"
 license = "MIT"
 repository = "https://github.com/danlehmann/bitfield"
