--- a/bitbybit/Cargo.toml
+++ b/bitbybit/Cargo.toml
@@ -18,6 +18,7 @@ introspect = []
 extra-traits = ["syn/extra-traits"]
 # Required for the field example to work.
 examples = ["arbitrary-int/defmt"]
+default = ["extra-traits"]
 
 [dependencies]
 syn = { version = "2.0", features = ["full"] }
